Fix: class name and minor corrections